welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:15: error: ';' expected but '{' found.
while (!sortieTrouv?e()){
                        ^