welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var cpt: Int = 0;
do {
  for (k <- 1 to 5) {
  	avance();
  	if (estSurBiscuit()) {
    	cpt = cpt + 1
  	}
  }
  if (cpt >= 3) {
    gauche();
  } else {
    droite();
  }
}
while (!sortieTrouv?e()){
  
}
avance();